[gd_scene load_steps=11 format=3 uid="uid://cndbcb81exqad"]

[ext_resource type="StyleBox" uid="uid://py3oc1qy66xb" path="res://App/AppMain/style_box_btn.tres" id="1_1ruca"]
[ext_resource type="Script" path="res://App/AppMain/app.gd" id="1_j3nuu"]
[ext_resource type="Theme" uid="uid://b4mgxtwuy0160" path="res://UI/themes/main_theme.tres" id="1_mfr3e"]
[ext_resource type="StyleBox" uid="uid://snxtmaas4or" path="res://App/AppMain/style_box_demand_btn.tres" id="2_3otyw"]
[ext_resource type="StyleBox" uid="uid://bdm5p3vs4frrv" path="res://App/AppMain/style_box_pressed_btn.tres" id="3_42yw7"]
[ext_resource type="StyleBox" uid="uid://dimu3f3foahrr" path="res://App/AppMain/style_box_assign_btn.tres" id="3_vapd6"]
[ext_resource type="StyleBox" uid="uid://dk4d6fjs47kh1" path="res://App/AppMain/style_box_supply_btn.tres" id="4_yexrk"]
[ext_resource type="PackedScene" uid="uid://dw70vonudpgfe" path="res://UI/check_box.tscn" id="6_05x5c"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3bg2t"]
bg_color = Color(0.556953, 0.556953, 0.556953, 1)
border_width_left = 2
border_width_right = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_afdba"]
bg_color = Color(0.503375, 0.503375, 0.503374, 1)
border_width_left = 2
border_width_right = 2

[node name="App" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_mfr3e")
script = ExtResource("1_j3nuu")

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
vertical_scroll_mode = 0

[node name="MarginContainer" type="MarginContainer" parent="ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_top = 12

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = -1

[node name="HeaderHBox" type="HBoxContainer" parent="ScrollContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0

[node name="TabsHBox" type="HBoxContainer" parent="ScrollContainer/MarginContainer/VBoxContainer/HeaderHBox"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="HomeBtn" type="Button" parent="ScrollContainer/MarginContainer/VBoxContainer/HeaderHBox/TabsHBox"]
unique_name_in_owner = true
custom_minimum_size = Vector2(140, 60)
layout_mode = 2
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_styles/pressed = ExtResource("3_42yw7")
theme_override_styles/normal = ExtResource("1_1ruca")
toggle_mode = true
text = "Home"

[node name="SurveyBtn" type="Button" parent="ScrollContainer/MarginContainer/VBoxContainer/HeaderHBox/TabsHBox"]
unique_name_in_owner = true
custom_minimum_size = Vector2(120, 60)
layout_mode = 2
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_styles/pressed = ExtResource("3_42yw7")
theme_override_styles/normal = ExtResource("1_1ruca")
toggle_mode = true
text = "Survey
"

[node name="DemandBtn" type="Button" parent="ScrollContainer/MarginContainer/VBoxContainer/HeaderHBox/TabsHBox"]
unique_name_in_owner = true
custom_minimum_size = Vector2(180, 60)
layout_mode = 2
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_styles/pressed = ExtResource("3_42yw7")
theme_override_styles/normal = ExtResource("2_3otyw")
toggle_mode = true
text = "Demand
"

[node name="AssignBtn" type="Button" parent="ScrollContainer/MarginContainer/VBoxContainer/HeaderHBox/TabsHBox"]
unique_name_in_owner = true
custom_minimum_size = Vector2(160, 60)
layout_mode = 2
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_styles/pressed = ExtResource("3_42yw7")
theme_override_styles/normal = ExtResource("3_vapd6")
toggle_mode = true
text = "Assign
"

[node name="SupplyBtn" type="Button" parent="ScrollContainer/MarginContainer/VBoxContainer/HeaderHBox/TabsHBox"]
unique_name_in_owner = true
custom_minimum_size = Vector2(140, 60)
layout_mode = 2
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_styles/pressed = ExtResource("3_42yw7")
theme_override_styles/normal = ExtResource("4_yexrk")
toggle_mode = true
text = "Supply"

[node name="MarginContainer" type="MarginContainer" parent="ScrollContainer/MarginContainer/VBoxContainer/HeaderHBox"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 20
theme_override_constants/margin_right = 20

[node name="FiltersHBox" type="HBoxContainer" parent="ScrollContainer/MarginContainer/VBoxContainer/HeaderHBox/MarginContainer"]
custom_minimum_size = Vector2(1580, 0)
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 25

[node name="IntensiveCheckBox" parent="ScrollContainer/MarginContainer/VBoxContainer/HeaderHBox/MarginContainer/FiltersHBox" instance=ExtResource("6_05x5c")]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 0)
layout_mode = 2
button_pressed = true
text = "INTENSIVE"

[node name="GeneralCheckBox" parent="ScrollContainer/MarginContainer/VBoxContainer/HeaderHBox/MarginContainer/FiltersHBox" instance=ExtResource("6_05x5c")]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 0)
layout_mode = 2
button_pressed = true
text = "GENERAL
"

[node name="VSeparator" type="VSeparator" parent="ScrollContainer/MarginContainer/VBoxContainer/HeaderHBox/MarginContainer/FiltersHBox"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 2
theme_override_styles/separator = SubResource("StyleBoxFlat_3bg2t")

[node name="IM1" parent="ScrollContainer/MarginContainer/VBoxContainer/HeaderHBox/MarginContainer/FiltersHBox" instance=ExtResource("6_05x5c")]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 0)
layout_mode = 2
button_pressed = true
text = "IM1
"

[node name="IM2" parent="ScrollContainer/MarginContainer/VBoxContainer/HeaderHBox/MarginContainer/FiltersHBox" instance=ExtResource("6_05x5c")]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 0)
layout_mode = 2
button_pressed = true
text = "IM2
"

[node name="IM3" parent="ScrollContainer/MarginContainer/VBoxContainer/HeaderHBox/MarginContainer/FiltersHBox" instance=ExtResource("6_05x5c")]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 0)
layout_mode = 2
button_pressed = true
text = "IM3"

[node name="VSeparator2" type="VSeparator" parent="ScrollContainer/MarginContainer/VBoxContainer/HeaderHBox/MarginContainer/FiltersHBox"]
visible = false
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 2
theme_override_styles/separator = SubResource("StyleBoxFlat_afdba")

[node name="Ia1" parent="ScrollContainer/MarginContainer/VBoxContainer/HeaderHBox/MarginContainer/FiltersHBox" instance=ExtResource("6_05x5c")]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 0)
layout_mode = 2
button_pressed = true
text = "Ia1"

[node name="Ia2" parent="ScrollContainer/MarginContainer/VBoxContainer/HeaderHBox/MarginContainer/FiltersHBox" instance=ExtResource("6_05x5c")]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 0)
layout_mode = 2
button_pressed = true
text = "Ia2"

[node name="Ia3" parent="ScrollContainer/MarginContainer/VBoxContainer/HeaderHBox/MarginContainer/FiltersHBox" instance=ExtResource("6_05x5c")]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 0)
layout_mode = 2
button_pressed = true
text = "Ia3
"

[node name="Ia4" parent="ScrollContainer/MarginContainer/VBoxContainer/HeaderHBox/MarginContainer/FiltersHBox" instance=ExtResource("6_05x5c")]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 0)
layout_mode = 2
text = "Ia4"

[node name="Ia5" parent="ScrollContainer/MarginContainer/VBoxContainer/HeaderHBox/MarginContainer/FiltersHBox" instance=ExtResource("6_05x5c")]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 0)
layout_mode = 2
text = "Ia5
"

[node name="Ga1" parent="ScrollContainer/MarginContainer/VBoxContainer/HeaderHBox/MarginContainer/FiltersHBox" instance=ExtResource("6_05x5c")]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 0)
layout_mode = 2
text = "Ga1
"

[node name="Ga2" parent="ScrollContainer/MarginContainer/VBoxContainer/HeaderHBox/MarginContainer/FiltersHBox" instance=ExtResource("6_05x5c")]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 0)
layout_mode = 2
text = "Ga2"

[node name="Ga3" parent="ScrollContainer/MarginContainer/VBoxContainer/HeaderHBox/MarginContainer/FiltersHBox" instance=ExtResource("6_05x5c")]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 0)
layout_mode = 2
text = "Ga3"

[node name="Ga4" parent="ScrollContainer/MarginContainer/VBoxContainer/HeaderHBox/MarginContainer/FiltersHBox" instance=ExtResource("6_05x5c")]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 0)
layout_mode = 2
text = "Ga4"

[node name="Ga5" parent="ScrollContainer/MarginContainer/VBoxContainer/HeaderHBox/MarginContainer/FiltersHBox" instance=ExtResource("6_05x5c")]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 0)
layout_mode = 2
text = "Ga5
"

[node name="HSeparator" type="HSeparator" parent="ScrollContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0

[node name="Content" type="Control" parent="ScrollContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3

[connection signal="pressed" from="ScrollContainer/MarginContainer/VBoxContainer/HeaderHBox/TabsHBox/HomeBtn" to="." method="_on_home_btn_pressed"]
[connection signal="pressed" from="ScrollContainer/MarginContainer/VBoxContainer/HeaderHBox/TabsHBox/SurveyBtn" to="." method="_on_survey_btn_pressed"]
[connection signal="pressed" from="ScrollContainer/MarginContainer/VBoxContainer/HeaderHBox/TabsHBox/DemandBtn" to="." method="_on_demand_btn_pressed"]
[connection signal="pressed" from="ScrollContainer/MarginContainer/VBoxContainer/HeaderHBox/TabsHBox/AssignBtn" to="." method="_on_assign_btn_pressed"]
[connection signal="pressed" from="ScrollContainer/MarginContainer/VBoxContainer/HeaderHBox/TabsHBox/SupplyBtn" to="." method="_on_supply_btn_pressed"]
[connection signal="pressed" from="ScrollContainer/MarginContainer/VBoxContainer/HeaderHBox/MarginContainer/FiltersHBox/IntensiveCheckBox" to="." method="_on_check_box_pressed"]
[connection signal="pressed" from="ScrollContainer/MarginContainer/VBoxContainer/HeaderHBox/MarginContainer/FiltersHBox/GeneralCheckBox" to="." method="_on_check_box_pressed"]
[connection signal="pressed" from="ScrollContainer/MarginContainer/VBoxContainer/HeaderHBox/MarginContainer/FiltersHBox/IM1" to="." method="_on_check_box_pressed"]
[connection signal="pressed" from="ScrollContainer/MarginContainer/VBoxContainer/HeaderHBox/MarginContainer/FiltersHBox/IM2" to="." method="_on_check_box_pressed"]
[connection signal="pressed" from="ScrollContainer/MarginContainer/VBoxContainer/HeaderHBox/MarginContainer/FiltersHBox/IM3" to="." method="_on_check_box_pressed"]
[connection signal="pressed" from="ScrollContainer/MarginContainer/VBoxContainer/HeaderHBox/MarginContainer/FiltersHBox/Ia1" to="." method="_on_check_box_pressed"]
[connection signal="pressed" from="ScrollContainer/MarginContainer/VBoxContainer/HeaderHBox/MarginContainer/FiltersHBox/Ia2" to="." method="_on_check_box_pressed"]
[connection signal="pressed" from="ScrollContainer/MarginContainer/VBoxContainer/HeaderHBox/MarginContainer/FiltersHBox/Ia3" to="." method="_on_check_box_pressed"]
[connection signal="pressed" from="ScrollContainer/MarginContainer/VBoxContainer/HeaderHBox/MarginContainer/FiltersHBox/Ia4" to="." method="_on_check_box_pressed"]
[connection signal="pressed" from="ScrollContainer/MarginContainer/VBoxContainer/HeaderHBox/MarginContainer/FiltersHBox/Ia5" to="." method="_on_check_box_pressed"]
[connection signal="pressed" from="ScrollContainer/MarginContainer/VBoxContainer/HeaderHBox/MarginContainer/FiltersHBox/Ga1" to="." method="_on_check_box_pressed"]
[connection signal="pressed" from="ScrollContainer/MarginContainer/VBoxContainer/HeaderHBox/MarginContainer/FiltersHBox/Ga2" to="." method="_on_check_box_pressed"]
[connection signal="pressed" from="ScrollContainer/MarginContainer/VBoxContainer/HeaderHBox/MarginContainer/FiltersHBox/Ga3" to="." method="_on_check_box_pressed"]
[connection signal="pressed" from="ScrollContainer/MarginContainer/VBoxContainer/HeaderHBox/MarginContainer/FiltersHBox/Ga4" to="." method="_on_check_box_pressed"]
[connection signal="pressed" from="ScrollContainer/MarginContainer/VBoxContainer/HeaderHBox/MarginContainer/FiltersHBox/Ga5" to="." method="_on_check_box_pressed"]
